# cpp_module_practice

./: CMakeLists.txt  Dockerfile  README.md  make.sh
contrib/nlohmann-json/: json3.10.hpp
src/: main.cpp
src/modules/module_a/: module_a.ixx
